# nb2025earthvision

./: .gitignore  README.md  pyproject.toml
src/nb2025earthvision/: __init__.py  __main__.py  campaign_data.py  constants.py  datasets.py  experiment_1_calibration.py  experiment_2_physical.py  experiment_3_supervised.py  experiment_4_selfsupervised.py  experiment_5_hybrid.py  metrics.py  models.py  paper_figures.py  paths.py  plot_functions.py  regions.py  validation.py
