[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "nb2025earthvision"
version = "1.0.1"
dependencies = [
  "numpy>=2.3.1",
  "torch>=2.7.1",
  "torchmetrics>=1.7.4",
  "matplotlib>=3.10.3",
  "pandas>=2.3.1",
  "shapely>=2.1.1",
  "pillow>=11.3.0",
  "fsarcamp==2.0.1",
  "sarssm==1.0.0",
]
license = {text = "MIT"}
description = "Explainable Physical PolSAR Autoencoders for Soil Moisture Estimation"
authors = [
    {name = "Nikita Basargin", email = "nikita.basargin@dlr.de"},
]
readme = "README.md"
requires-python = ">=3.13"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 120

[tool.ruff.format]
line-ending = "lf"
